@@ -42,7 +42,7 @@ public record TabCompletePacket(int transactionId, int start, int length,
 
     @Override
     public @NotNull Collection<Component> components() {
-        if (matches.isEmpty()) return Collections.emptyList();
+        if (matches.isEmpty()) return List.of();
         List<Component> components = new ArrayList<>(matches.size());
         for (Match match : matches) {
             if (match.tooltip != null) {
@@ -75,7 +75,7 @@ public record TabCompletePacket(int transactionId, int start, int length,
 
         @Override
         public @NotNull Collection<Component> components() {
-            return tooltip != null ? Collections.singletonList(tooltip) : Collections.emptyList();
+            return tooltip != null ? Collections.singletonList(tooltip) : List.of();
         }
 
         @Override
